# realm-fortress

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  attribution.md
assets/blender/: scene.blend  scene.blend1
assets/shaders/: basic.frag  basic.glsl  basic.vert  basic_terrain.frag  basic_terrain.vert  ghost_building.glsl  hex_highlight.glsl  highlight.frag  highlight.vert  instanced.glsl  thumbnail.glsl  translucent.glsl
config/: compiler.cmake  config.cmake  platform.cmake  precompile.cmake  vendor.cmake
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  KeyCodes.h  MouseCodes.h  Time.cpp  Time.h  Window.cpp  Window.h  application.cpp  application.h  base.h  entry_point.cpp  input.cpp  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  logger.cpp  logger.h  mouse_codes.h  pch.h  timestep.h  window.cpp  window.h
src/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  application_event.h  event.h  key_event.h  mouse_event.h
src/game/: application_impl.cpp  building.cpp  building.h  faction.h  game_layer.cpp  game_layer.h  hex_coordinate.cpp  hex_coordinate.h  hex_map.cpp  hex_map.h  perlin_noise.h  resource_type.cpp  resource_type.h  selection.cpp  selection.h  thumbnail_generator.cpp  thumbnail_generator.h
src/game/building/: building.cpp  building.h  building_manager.cpp  building_manager.h  farm.cpp  farm.h  lumbermill.cpp  lumbermill.h  market.cpp  market.h  mine.cpp  mine.h  townhall.cpp  townhall.h
src/game/decoration/: decoration.cpp  decoration.h  decoration_manager.cpp  decoration_manager.h  decoration_type.h
src/game/hex/: hex_constants.h  hex_coordinate.cpp  hex_coordinate.h  hex_map.cpp  hex_map.h  hex_pathfinding.cpp  hex_pathfinding.h  hex_terrain_generator.cpp  hex_terrain_generator.h  hex_utils.cpp  hex_utils.h
src/game/map/: chunk.cpp  chunk.h  map.cpp  map.h
src/game/resource/: resource.cpp  resource.h  resource_type.cpp  resource_type.h  warehouse.cpp  warehouse.h
src/game/structure/: structure.cpp  structure.h  structure_manager.cpp  structure_manager.h  structure_types.h
src/game/system/: camera_controller.cpp  camera_controller.h  constants.h  coordinate.cpp  coordinate.h  map.cpp  map.h  model_manager.cpp  picker.cpp  picker.h  selection.cpp  selection.h  tile.cpp  tile.h  utils.h
src/game/ui/: panel_base.h  panel_build.cpp  panel_build.h  panel_debug.cpp  panel_debug.h  panel_resources.cpp  panel_resources.h  panel_tile_info.cpp  panel_tile_info.h  ui_manager.cpp  ui_manager.h
src/game/unit/: unit.cpp  unit.h  unit_manager.cpp  unit_manager.h  unit_types.h
src/gameplay/: HexGrid.cpp  HexGrid.h  HexTile.h  TileSelector.cpp  TileSelector.h
src/imgui/: imgui_layer.cpp  imgui_layer.h
src/renderer/: HighlightRenderer.cpp  HighlightRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_cache.cpp  model_cache.h  model_manager.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/scene/: Camera.cpp  Camera.h  GridRenderer.cpp  GridRenderer.h  Scene.cpp  Scene.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
